# checkers

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
sources/: main.cpp
sources/game/: game.cpp  game.h  machine.cpp  machine.h  position.cpp  position.h  sequential_mover.cpp  sequential_mover.h
sources/math/: geometry.cpp  geometry.h  utilities.cpp  utilities.h
sources/user/: interface.cpp  interface.h  settings.cpp  settings.h
